Fixed center alignment of image inside middleContainer, changed id to unique and the rest to class, removed commented code

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ body {
   border-radius: 12px;
 }
 
-#navContainer {
+#bottomContainer {
   width: 780px;
   margin: auto;
   background: white;
@@ -72,7 +72,7 @@ form {
   padding: 10px;
 }
 
-#comicTitle {
+.comicTitle {
   margin: 10px;
   font-size: 21px;
   font-weight: 800;
@@ -102,13 +102,16 @@ form {
   box-sizing: border-box;
 }
 
-.column {
-  padding: 5px;
-}
-
-.row {
+ul.row {
+  padding: 0;
+  list-style-type: none;
   display: flex;
   justify-content: space-around;
+  margin: 0 auto;
+}
+
+ul.row li {
+  padding: 5px;
 }
 
 ul.numDisplay {
